--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,7 @@ input[type="radio"].visually-hidden  {
 }
 
 .header-contact {
+  width: 300px;
   margin-top: 53px;
   margin-left: 26px;
   text-align: center;
@@ -348,9 +349,8 @@ input[type="radio"].visually-hidden  {
 
 .user-navigation {
   position: relative;
-  margin-top: 58px;
+  margin-top: 46px;
 }
-
 
 .user-navigation a {
   color: var(--basic-black);
@@ -369,6 +369,7 @@ input[type="radio"].visually-hidden  {
 }
 
 .user-login a {
+  display: inline-block;
   background-color: var(--basic-white);
 }
 
@@ -406,20 +407,29 @@ input[type="radio"].visually-hidden  {
 }
 
 .user-login-register {
+  margin-left: 5px;
   padding-top: 12px;
   padding-right: 24px;
   padding-bottom: 12px;
   padding-left: 24px;
-  margin-left: 5px;
+}
+
+.user-navigation-link {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  width: 300px;
+  word-wrap: break-word;
+  background-color: var(--basic-white);
 }
 
 .user-navigation .user-name {
   position: relative;
   padding-top: 12px;
-  padding-right: 57px;
+  padding-right: 20px;
   padding-bottom: 12px;
   padding-left: 56px;
-  background-color: var(--basic-white);
 }
 
 .user-navigation .user-name:hover {
@@ -434,7 +444,7 @@ input[type="radio"].visually-hidden  {
 .user-navigation .user-name::before {
   content: "";
   position: absolute;
-  top: 15px;
+  top: 13px;
   left: 15px;
   width: 20px;
   height: 18px;
@@ -456,11 +466,9 @@ input[type="radio"].visually-hidden  {
 }
 
 .user-navigation-logout {
-  position: absolute;
-  top: 2px;
-  right: 17px;
   width: 20px;
   height: 17px;
+  padding-right: 17px;
   background-image: url(../img/icon-logout.svg);
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -482,14 +490,14 @@ input[type="radio"].visually-hidden  {
 .user-navigation-list {
   display: flex;
   justify-content: center;
+  position: relative;
   margin: 0;
-  margin-top: 13px;
+  margin-top: 4px;
   padding: 0;
   list-style: none;
 }
 
 .user-navigation-list a {
-  position: relative;
   margin-right: 17px;
   margin-left: 15px;
   font-size: 16px;
@@ -506,11 +514,11 @@ input[type="radio"].visually-hidden  {
   text-decoration: none;
 }
 
-.user-navigation-list li:last-child::before {
+.user-navigation-list li:first-child::before {
   content: "";
   position: absolute;
-  top: 48px;
-  right: 162px;
+  top: 11px;
+  left: 134px;
   width: 4px;
   height: 4px;
   background-color: var(--basic-darkgrey);
@@ -558,19 +566,19 @@ input[type="radio"].visually-hidden  {
 /* Section promo */
 
 .promo {
-  display: grid;
-  grid-template-columns: 300px 300px;
-  grid-template-rows: 123px;
-  gap: 20px;
   padding-top: 59px;
   padding-bottom: 59px;
 }
 
 .promo-list {
   display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-areas: "materials tool technic"
+                       "slider slider discounts"
+                       "slider slider delivery";
   gap: 20px;
   margin: 0;
-  margin-bottom: 20px;
   padding: 0;
   list-style: none;
 }
@@ -578,12 +586,12 @@ input[type="radio"].visually-hidden  {
 .promo-item {
   position: relative;
   width: 300px;
-  height: 123px;
+  padding-top: 20px;
+  padding-bottom: 21px;
 }
 
 .promo-list h2 {
   margin: 0;
-  margin-top: 21px;
   margin-bottom: 13px;
   margin-left: 23px;
   color: var(--basic-white);
@@ -593,6 +601,7 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list .materials {
+  grid-area: materials;
   background-color: var(--special-yellow);
   background-image: url(../img/icon-1.svg);
   background-repeat: no-repeat;
@@ -600,6 +609,7 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list .tool {
+  grid-area: tool;
   background-color: var(--special-blue);
   background-image: url(../img/icon-2.svg);
   background-repeat: no-repeat;
@@ -607,6 +617,7 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list .technic {
+  grid-area: technic;
   background-color: var(--special-lilac);
   background-image: url(../img/icon-3.svg);
   background-repeat: no-repeat;
@@ -614,7 +625,7 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list .discounts {
-  grid-column-start: 3;
+  grid-area: discounts;
   background-color: var(--special-greenlight);
   background-image: url(../img/icon-4.svg);
   background-repeat: no-repeat;
@@ -622,7 +633,7 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list .delivery {
-  grid-column-start: 3;
+  grid-area: delivery;
   background-color: var(--special-yellow);
   background-image: url(../img/icon-5.svg);
   background-repeat: no-repeat;
@@ -653,7 +664,8 @@ input[type="radio"].visually-hidden  {
   background-color: rgba(169, 169, 169, 0.3);
 }
 
-.label {
+.label:before {
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
@@ -669,8 +681,7 @@ input[type="radio"].visually-hidden  {
 
 .slider {
   position: relative;
-  grid-column-start: 1;
-  grid-column-end: 3;
+  grid-area: slider;
 }
 
 .slider-controls {
@@ -705,8 +716,8 @@ input[type="radio"].visually-hidden  {
 
 .slider-controls-radio {
   position: absolute;
-  left: 293px;
-  bottom: 31px;
+  left: 292px;
+  top: 211px;
 } 
 
 .slider-controls-radio button {
@@ -726,9 +737,7 @@ input[type="radio"].visually-hidden  {
   background-color: var(--basic-red);
 }
 
-
 .slider-list {
-  grid-column-start: 1;
   margin: 0;
   padding: 0;
   color: var(--basic-white);
@@ -856,7 +865,7 @@ input[type="radio"].visually-hidden  {
 
 .services p {
   margin: 0;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 13px;
   line-height: 25px;
 }
@@ -908,13 +917,6 @@ input[type="radio"].visually-hidden  {
   background-color: var(--basic-darkslategray);
 }
 
-.services-controls a:active,
-.services-controls a:focus {
-  color: var(--basic-darkslategray);
-  background-color: var(--basic-white);
-  border: none;
-}
-
 .services-controls .active {
   pointer-events: none;
   cursor: default;
@@ -932,8 +934,13 @@ input[type="radio"].visually-hidden  {
 }
 
 .services-item {
+  display: none;
   width: 619px;
   min-height: 283px;
+}
+
+.services-item.active {
+  display: block;
 }
 
 .services-item p {
@@ -950,31 +957,28 @@ input[type="radio"].visually-hidden  {
   letter-spacing: -1px;
 }
 
-.services-list .delivery {
+.services-list .services-delivery {
   background-image: url(../img/delivery.png);
   background-repeat: no-repeat;
   background-position: right bottom;
 }
 
-.services-list .guarantee {
-  display: none;
+.services-list .services-guarantee {
   background-image: url(../img/guarantee.png);
   background-repeat: no-repeat;
   background-position: right bottom;
 }
 
-.services-list .credit {
-  display: none;
+.services-list .services-credit {
   background-image: url(../img/credit.png);
   background-repeat: no-repeat;
   background-position: right bottom;
 }
 
-.services .button {
+.services-item .button {
+  display: block;
   width: 195px;
   margin-top: 27px;
-  padding-top: 10px;
-  padding-bottom: 10px;
   border-radius: 2px;
 }
 
@@ -1002,15 +1006,19 @@ input[type="radio"].visually-hidden  {
 
 .about-company p {
   margin: 0;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 13px;
   line-height: 24px;
+}
+
+.about-company p:nth-last-child(2n) {
+  margin-bottom: 27px;
 }
 
 .about-company-list {
   position: relative;
   margin: 0;
-  margin-top: 5px;
+  margin-top: 2px;
   margin-bottom: 18px;
   padding: 0;
   padding-left: 36px;
@@ -1070,7 +1078,7 @@ input[type="radio"].visually-hidden  {
 
 .contacts p {
   width: 180px;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 13px;
   line-height: 24px;
 }
@@ -1083,13 +1091,10 @@ input[type="radio"].visually-hidden  {
 }
 
 .contacts-button {
+  display: block;
   width: 300px;
   margin-top: 25px;
   cursor: pointer;
-}
-
-.contacts-button:active {
-  outline: none;
 }
 
 /* Breadcrumbs */
@@ -1101,7 +1106,7 @@ input[type="radio"].visually-hidden  {
   margin: 0;
   margin-top: 21px;
   padding: 0;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   color: var(--basic-black);
   font-size: 13px;
   line-height: 18px;
@@ -1161,7 +1166,7 @@ input[type="radio"].visually-hidden  {
 .filters {
   width: 220px;
   margin-top: 5px;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   text-transform: uppercase;
 }
 
@@ -1179,21 +1184,22 @@ input[type="radio"].visually-hidden  {
 .filter fieldset {
   padding: 0;
   margin: 0;
-  margin-bottom: 16px;
+  margin-bottom: 15px;
   border: none;
+  border-bottom: 1px solid var(--basic-greylight);
 }
 
-.filters hr {
-  margin: 0;
-  margin-bottom: 15px;
-  border: 0;
-  height: 1px;
-  background-color: var(--basic-greylight);
+.filter fieldset:nth-child(2) {
+  padding-bottom: 8px;
+}
+
+.filter fieldset:nth-child(3) {
+  margin-top: 18px;
+  border: none;
 }
 
 .filter fieldset:first-child {
   margin-top: 22px;
-  margin-bottom: 24px;
 }
 
 .filter legend {
@@ -1214,6 +1220,7 @@ input[type="radio"].visually-hidden  {
 
 .range-filter {
   width: 220px;
+  padding-bottom: 23px;
 }
 
 .range-controls {
@@ -1344,7 +1351,7 @@ input[type="radio"].visually-hidden  {
   position: absolute;
   top: -2px;
   left: -35px;
-  width: 23px;
+  width: 27px;
   height: 23px;
   background-image: url(../img/checkbox-on.svg);
   background-repeat: no-repeat;
@@ -1360,6 +1367,10 @@ input[type="radio"].visually-hidden  {
 .filter-input-checkbox:focus + label,
 .filter-input-radio:focus + label {
   color: var(--basic-red);
+}
+
+.filter .filter-list {
+  margin-top: 12px;
 }
 
 .filter-input-radio + label::before {
@@ -1405,13 +1416,19 @@ input[type="radio"].visually-hidden  {
   line-height: 18px;
   border-width: 1px;
   border-style: solid;
+  border-color: var(--special-pagination);
   background-color: var(--basic-white);
+  cursor: pointer;
+}
+
+.filter-button:hover {
   border-color: var(--basic-gray);
 }
 
-.filter-button:hover, 
+.filter-button:active,
 .filter-button:focus {
-  background-color: var(--basic-greylight);
+  outline: none;
+  border-color: var(--basic-red);
 }
 
 /* Sorting */
@@ -1420,7 +1437,7 @@ input[type="radio"].visually-hidden  {
   display: flex;
   justify-content: space-between;
   margin-bottom: 28px;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   text-transform: uppercase;
   background-color: var(--special-catalog-sort);
   border-radius: 2px;
@@ -1520,6 +1537,7 @@ input[type="radio"].visually-hidden  {
 }
 
 .product-list {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   padding: 0;
@@ -1580,7 +1598,7 @@ input[type="radio"].visually-hidden  {
   padding-right: 17px;
   padding-left: 18px;
   color: var(--basic-black);
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 18px;
   line-height: 21px;
   font-weight: bold;
@@ -1595,7 +1613,7 @@ input[type="radio"].visually-hidden  {
   flex-direction: column;
   justify-content: flex-end;
   height: 83px;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 17px;
   line-height: 18px;
   font-weight: bold;
@@ -1633,10 +1651,6 @@ input[type="radio"].visually-hidden  {
   transform: rotate(45deg);
 }
 
-.product-label {
-  position: absolute;
-}
-
 .button-item {
   display: none;
   position: absolute;
@@ -1655,12 +1669,14 @@ input[type="radio"].visually-hidden  {
 } 
 
 .button-buy {
+  display: block;
   position: relative;
+  width: 126px;
+  margin: 0 auto;
   margin-bottom: 10px;
   padding-top: 10px;
-  padding-right: 40px;
-  padding-bottom: 11px;
-  padding-left: 53px;
+  padding-bottom: 9px;
+  padding-left: 10px;
   color: var(--basic-white);
   background-color: var(--basic-green);
   box-shadow: inset 0px -3px 0px var(--special-green-active);
@@ -1726,7 +1742,7 @@ input[type="radio"].visually-hidden  {
   margin-left: 20px;
   padding: 0;
   list-style: none;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   text-transform: uppercase;
 }
 
@@ -1742,6 +1758,7 @@ input[type="radio"].visually-hidden  {
   border-width: 1px;
   border-style: solid;
   border-color: var(--special-pagination);
+  border-radius: 2px;
 }
 
 .pagination-list .pagination-button {
@@ -1750,10 +1767,7 @@ input[type="radio"].visually-hidden  {
 }
 
 .pagination-list a:hover {
-  border-width: 1px;
-  border-style: solid;
   border-color: var(--basic-gray);
-  border-radius: 2px;
 }
 
 .pagination-list a:active,
@@ -1761,8 +1775,7 @@ input[type="radio"].visually-hidden  {
   border-color: var(--basic-red);
 }
 
-.pagination-list .active,
-.pagination-list .active:hover {
+.pagination-list .active {
   color: var(--basic-white);
   background-color: var(--basic-red);
   border: none;
@@ -1770,20 +1783,20 @@ input[type="radio"].visually-hidden  {
 
 /* Section category description */
 
-.category-descr {
+.category-description {
   padding-top: 66px;
   padding-bottom: 68px;
   background-color: var(--basic-grey);
 }
 
-.category-descr .title {
+.category-description .title {
   margin-bottom: 23px;
   letter-spacing: -0.7px;
 }
 
-.category-descr p {
+.category-description p {
   margin: 0;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 13px;
   line-height: 25px;
 }
@@ -1811,11 +1824,21 @@ input[type="radio"].visually-hidden  {
   box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
 }
 
+.footer-logo:active,
+.footer-logo:focus {
+  background-color: var(--special-red-hover);
+}
+
 .footer-contacts p {
   width: 325px;
   margin: 0;
   margin-bottom: 54px;
   margin-left: 2px;
+}
+
+.footer-contacts a {
+  display: block;
+  width: 135px;
 }
 
 .footer-contacts,
@@ -1872,10 +1895,6 @@ input[type="radio"].visually-hidden  {
   color: var(--basic-white);
   font-size: 16px;
   line-height: 18px;
-}
-
-.footer-wrapper a {
-  color: var(--special-yellowlight);
 }
 
 .footer-wrapper a:hover {
@@ -1945,6 +1964,11 @@ input[type="radio"].visually-hidden  {
   color: var(--basic-white);
   font-size: 16px;
   line-height: 18px;
+}
+
+.communication a {
+  display: block;
+  color: var(--special-yellowlight);
 }
 
 /* Modal */
@@ -2051,7 +2075,7 @@ input[type="radio"].visually-hidden  {
   border-style: solid;
   border-color: var(--basic-gray);
   border-radius: 2px;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 13px;
   line-height: 24px;
   color: var(--special-old-price);
@@ -2068,7 +2092,7 @@ input[type="radio"].visually-hidden  {
   border-style: solid;
   border-color: var(--basic-gray);
   border-radius: 2px;
-  font-family: 'PT Sans', Arial, Helvetica, sans-serif;
+  font-family: "PT Sans", Arial, Helvetica, sans-serif;
   font-size: 13px;
   line-height: 24px;
   color: var(--special-old-price);
@@ -2132,13 +2156,13 @@ input[type="radio"].visually-hidden  {
   padding-bottom: 9px;
 }
 
-.button-buy-popap {
+.button-buy-popup {
   padding-right: 46px;
   padding-left: 47px;
   margin-right: 5px;
 }
 
-.button-continue-popap {
+.button-continue-popup {
   padding-right: 31px;
   padding-left: 32px;
   color: var(--basic-black);
