--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,7 @@ input[type="radio"].visually-hidden  {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   width: 300px;
   word-wrap: break-word;
   background-color: var(--basic-white);
@@ -426,6 +426,7 @@ input[type="radio"].visually-hidden  {
 
 .user-navigation .user-name {
   position: relative;
+  width: 186px;
   padding-top: 12px;
   padding-right: 20px;
   padding-bottom: 12px;
@@ -468,7 +469,7 @@ input[type="radio"].visually-hidden  {
 .user-navigation-logout {
   width: 20px;
   height: 17px;
-  padding-right: 17px;
+  margin-top: 14px;
   background-image: url(../img/icon-logout.svg);
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -572,8 +573,8 @@ input[type="radio"].visually-hidden  {
 
 .promo-list {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
   grid-template-areas: "materials tool technic"
                        "slider slider discounts"
                        "slider slider delivery";
@@ -591,6 +592,7 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list h2 {
+  width: 135px;
   margin: 0;
   margin-bottom: 13px;
   margin-left: 23px;
@@ -601,7 +603,6 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list .materials {
-  grid-area: materials;
   background-color: var(--special-yellow);
   background-image: url(../img/icon-1.svg);
   background-repeat: no-repeat;
@@ -609,7 +610,6 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list .tool {
-  grid-area: tool;
   background-color: var(--special-blue);
   background-image: url(../img/icon-2.svg);
   background-repeat: no-repeat;
@@ -617,7 +617,6 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list .technic {
-  grid-area: technic;
   background-color: var(--special-lilac);
   background-image: url(../img/icon-3.svg);
   background-repeat: no-repeat;
@@ -625,7 +624,6 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list .discounts {
-  grid-area: discounts;
   background-color: var(--special-greenlight);
   background-image: url(../img/icon-4.svg);
   background-repeat: no-repeat;
@@ -633,7 +631,6 @@ input[type="radio"].visually-hidden  {
 }
 
 .promo-list .delivery {
-  grid-area: delivery;
   background-color: var(--special-yellow);
   background-image: url(../img/icon-5.svg);
   background-repeat: no-repeat;
